1998-12-27  Roland McGrath  <roland@baalperazim.frob.com>

	* store.h: Remove defns of STORAGE_*, now in <hurd/hurd_types.h>.

1998-12-21  Roland McGrath  <roland@baalperazim.frob.com>

	* open.c (store_open): Like file.c:fiopen, catch EACCES or EROFS
	and try to open read-only.

	* file.c (fiopen): Treat EROFS same as EACCES.

1998-10-20  Roland McGrath  <roland@baalperazim.frob.com>

	* flags.c (store_clear_flags): Add braces to silence gcc warning.

1998-10-19  Roland McGrath  <roland@baalperazim.frob.com>

	* rdwr.c (store_read): Add braces to silence gcc warning.
	* flags.c (store_set_flags): Likewise.
	* typed.c (store_typed_open): Likewise.
	* decode.c (store_decode): Likewise.
	* argp.c (store_parsed_append_args): Likewise.
	(store_parsed_name): Likewise.
	(store_parsed_open): Likewise.

1998-09-05  Roland McGrath  <roland@baalperazim.frob.com>

	* argp.c (store_parsed_append_args): Use %d for layer, which is int.
	Cast to int for %* field width arg.

1997-09-22  Miles Bader  <miles@gnu.ai.mit.edu>

	* encode.c (store_encode): Allocate the correct amount of memory
	for the encoding vectors.

	* make.c (_store_create): Initialize NEW->misc_len.

	* mvol.c (store_mvol_class): Set correct members.
	(store_mvol_create): Declare PHYS correctly.
	<stdio.h>: New include.
	* store.h (store_mvol_create): Declare PHYS correctly.
	* Makefile (SRCS): Add mvol.c.

1997-08-11  Miles Bader  <miles@gnu.ai.mit.edu>

	* store.h (store_mvol_create): New declaration.
	(store_mvol_class): New declaration.
	* mvol.c: New file.

1997-07-24  Miles Bader  <miles@gnu.ai.mit.edu>

	* device.c (store_device_create): Treat devices that can't do
	device_get_status as zero-length.
	(dev_map): Pass 0 for OFFSET and SIZE arguments to device_map --
	mach ignores them, and we often can't supply meaningful values.
	* make.c (_store_create): If BLOCK_SIZE is zero, make sure there
	are no runs.
	* derive.c (_store_derive): Let BSIZE be zero.

1997-07-21  Miles Bader  <miles@gnu.ai.mit.edu>
