@@ -25,11 +25,12 @@ makemode := library
 libname = libstore
 SRCS = create.c derive.c make.c rdwr.c set.c device.c file.c stripe.c	   \
 	enc.c encode.c decode.c clone.c argp.c std.c kids.c zero.c flags.c \
-	open.c remap.c xinl.c task.c typed.c copy.c gunzip.c map.c mvol.c
+	open.c remap.c xinl.c task.c typed.c copy.c gunzip.c map.c mvol.c \
+	bunzip2.c
 LCLHDRS=store.h
 installhdrs=store.h
 
-UNZIP_OBJS = unzip.o inflate.o util.o
+UNZIP_OBJS = unzip.o inflate.o util.o do-bunzip2.o
 OBJS = $(SRCS:.c=.o) $(UNZIP_OBJS)
 
 # Look for zip stuff
